--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chance": "^1.1.12",
     "chart.js": "^4.4.3",
     "iconsax-react": "^0.0.8",
+    "imagefrombuffer": "^1.0.12",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
