--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
     "sass": "^1.77.8",
+    "serve": "^14.2.3" ,
     "simplebar-react": "^3.2.6",
     "typescript": "4.9.5",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=3000 react-scripts start",
+    "start": "serve -s start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
